new handlers and service

--- a/spring-websocket-service/src/main/resources/static/index.html
+++ b/spring-websocket-service/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
             <table id="chat">
                 <thead>
                 <tr>
-                    <th>Welcome user. Please enter you name</th>
+                    <th>Welcome user. Please enter your name</th>
                 </tr>
                 </thead>
                 <tbody id="helloworldmessage">
@@ -38,7 +38,8 @@
         <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
-                    <textarea id="user" placeholder="Write your message here..." required></textarea>
+                    <textarea id="userId" placeholder="Enter ID to resume..." required></textarea>
+                    <textarea id="input" placeholder="Write your message here..." required></textarea>
                 </div>
                 <button id="send" type="submit">Send</button>
             </form>
