handling more nodes

--- a/spring-websocket-service/src/main/resources/static/index.html
+++ b/spring-websocket-service/src/main/resources/static/index.html
@@ -38,8 +38,8 @@
         <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
-                    <textarea id="userId" placeholder="Enter ID to resume..." required></textarea>
-                    <textarea id="input" placeholder="Write your message here..." required></textarea>
+                    <textarea id="userId" placeholder="Enter ID to resume..."></textarea>
+                    <textarea id="input" placeholder="Write your message here..."></textarea>
                 </div>
                 <button id="send" type="submit">Send</button>
             </form>
