--- a/spring-websocket-service/src/main/resources/static/index.html
+++ b/spring-websocket-service/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
                     <th>Welcome user. Please enter your name</th>
                 </tr>
                 </thead>
-                <tbody id="helloworldmessage">
+                <tbody id="response">
                 </tbody>
             </table>
         </div>
